--- a/ClientApp/src/custom.css
+++ b/ClientApp/src/custom.css
@@ -1,4 +1,7 @@
 /* Provide sufficient contrast against white background */
+body {
+  background-color: black;
+}
 a {
   color: #0366d6;
 }
@@ -12,3 +15,13 @@ code {
   background-color: #1b6ec2;
   border-color: #1861ac;
 }
+
+.card-title {
+  color: #DB5E2FFF;
+}
+
+.card-text {
+  color: #DB5E2FFF;
+}
+
+
